apps/agora/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: server
spec:
  parentRefs:
    - name: bretagne-gateway
      namespace: traefik
      sectionName: https-agora
  hostnames:
    - agora.bretagne.dev
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: "max-age=86400; includeSubDomains"
      backendRefs:
        - name: oauth2-proxy
          port: 4180
